# drs

./: .gitignore  Makefile  README.md  analysis.py  drs.py  meson.build  mise.toml  pyproject.toml
configs/: base.yaml
configs/experiments/: baseline.yaml
docs/: fortran2python.md
eiscor/: Makefile
eiscor/src/double/: d_orthhess_qr.f90
exploration/: explore.py
fortran/: meson.build
fortran/eiscor/src/: meson.build
fortran/eiscor/src/complex_double/: meson.build
fortran/eiscor/src/double/: meson.build
fortran/eiscor/src/logical/: meson.build
fortran/eiscor/src/utilities/: meson.build
outputs/runs/2026-03-07_023627_baseline/: config_used.json  drs.csv  signal_preprocessed.npy  signal_reconstruction.npy
outputs/runs/2026-03-09_202848_baseline/: drs.csv  signal_reconstruction.npy
scripts/: run_experiment.py
src/: fpt.py  main.py  resonance.py  utilities_store.py  visualization.py
src/drs/: __init__.py  analysis.py  config.py  core.py  drs.py  io.py  plotting.py  preprocessing.py  recurrence.py  resonance.py
tests/: tests.py
