fortran_src += files(
  'z_1Darray_check.f90',
  'z_1Darray_random_normal.f90',
  'z_2Darray_check.f90',
  'z_2Darray_random_normal.f90',
  'z_2x2array_eig.f90',
  'z_compmat_compress.f90',
  'z_comppen_compress.f90',
  'z_poly_residuals.f90',
  'z_poly_roots.f90',
  'z_rfr3_turnover.f90',
  'z_rot3array_check.f90',
  'z_rot3_check.f90',
  'z_rot3_fusion.f90',
  'z_rot3_swapdiag.f90',
  'z_rot3_turnover.f90',
  'z_rot3_unitvec3gen.f90',
  'z_rot3_vec3gen.f90',
  'z_rot3_vec4gen.f90',
  'z_scalar_argument.f90',
  'z_scalar_check.f90',
  'z_scalar_random_normal.f90',
  'z_unifact_2x2diagblock.f90',
  'z_unifact_buildbulge.f90',
  'z_unifact_deflationcheck.f90',
  'z_unifact_factorcheck.f90',
  'z_unifact_mergebulge.f90',
  'z_unifact_qr.f90',
  'z_unifact_singlestep.f90',
  'z_unihess_factor.f90',
  'z_unihess_qr.f90',
  'z_upr1fact_2x2diagblocks.f90',
  'z_upr1fact_buildbulge.f90',
  'z_upr1fact_chasedown.f90',
  'z_upr1fact_decompress.f90',
  'z_upr1fact_deflationcheck.f90',
  'z_upr1fact_endchase.f90',
  'z_upr1fact_factorcheck.f90',
  'z_upr1fact_qr.f90',
  'z_upr1fact_singleshift.f90',
  'z_upr1fact_singlestep.f90',
  'z_upr1fact_startchase.f90',
  'z_upr1fpen_buildbulge.f90',
  'z_upr1fpen_chasedown.f90',
  'z_upr1fpen_decompress.f90',
  'z_upr1fpen_deflationcheck.f90',
  'z_upr1fpen_endchase.f90',
  'z_upr1fpen_qz.f90',
  'z_upr1fpen_singleshift.f90',
  'z_upr1fpen_singlestep.f90',
  'z_upr1fpen_startchase.f90',
  'z_upr1utri_decompress.f90',
  'z_upr1utri_rot3swap.f90',
  'z_upr1utri_unimodscale.f90',
  'z_urffact_deflationcheck.f90',
  'z_urffact_qr.f90',
  'z_urffact_singlestep.f90',
)
