fortran_src += files(
  'd_1Darray_check.f90',
  'd_1Darray_random_normal.f90',
  'd_2Darray_check.f90',
  'd_2Darray_random_normal.f90',
  'd_2x2array_eig.f90',
  'd_orthfact_2x2deflation.f90',
  'd_orthfact_2x2diagblock.f90',
  'd_orthfact_buildbulge.f90',
  'd_orthfact_deflationcheck.f90',
  'd_orthfact_doublestep.f90',
  'd_orthfact_factorcheck.f90',
  'd_orthfact_mergebulge.f90',
  'd_orthfact_qr.f90',
  'd_orthfact_real2complex.f90',
  'd_orthhess_factor.f90',
  'd_orthhess_qr.f90',
  'd_orthhess_real2complex.f90',
  'd_rot2array_check.f90',
  'd_rot2_check.f90',
  'd_rot2_fuse.f90',
  'd_rot2_swapdiag.f90',
  'd_rot2_turnover.f90',
  'd_rot2_unitvec2gen.f90',
  'd_rot2_vec2gen.f90',
  'd_scalar_check.f90',
  'd_scalar_random_normal.f90',
  'd_symtrid_factor.f90',
  'd_symtrid_qr.f90',
  'd_symtrid_specint.f90',
)
